<resources>
    <string name="app_name">CarFull</string>
    <string name="car">Car</string>
    <string name="Starttime">Start Time</string>
    <string name="expens_per_unit">Expens per Unit</string>
    <string name="calculat_methode">Calculat Methode</string>
    <string name="start_fuel">Start Fuel</string>
    <string name="start">Start</string>
    <string-array name="calculation_methods">
        <item>Method</item>
        <item>Distanc_in_km</item>
        <item>realFuel</item>
        <item>Expectet_Fuel</item>
        <item>Time</item>
    </string-array>
    <string name="title_activity_drive">Map</string>
    <string name="idendification_number">Idendification Number</string>
    <string name="prename">Prename</string>
    <string name="name">Name</string>
    <string name="begin">Begin</string>
    <string name="your_input_is_wrong_pleas_check_your_name_and_identification_number">Your Input is wrong. Pleas check your name and Identification Number</string>
    <string name="senden">Senden</string>
    <string name="email_adresse">Email Adresse</string>
    <string name="textview">TextView</string>
    <string name="end_fuel">End Fuel</string>
    <string name="arrived">Arrived</string>
    <string name="total">Total</string>
    <string name="fuel">Fuel</string>
    <string name="distanz">Distanz</string>
    <string name="duration">Duration</string>
    <string name="expenses_per_unit">Expenses Per Unit</string>
    <string name="save">Save</string>
    <string name="caluculat">Caluculat</string>
</resources>
