<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeforeDrive">

    <TextView
        android:id="@+id/head"
        android:layout_width="218dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:text="Information about the trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/GridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:columnCount="2"
        app:layout_constraintBottom_toTopOf="@+id/StartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head">

        <TextView
            android:id="@+id/CarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/car"
            android:layout_rowWeight="0"
            android:layout_columnWeight="0"/>

        <TextView
            android:id="@+id/PerUnitView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/expens_per_unit" />

        <TextView
            android:id="@+id/MethodeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/calculat_methode" />

        <TextView
            android:id="@+id/FuelView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/start_fuel" />

        <Spinner
            android:id="@+id/CarSpinner"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"/>

        <Spinner
            android:id="@+id/Method"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:entries="@array/calculation_methods" />

        <EditText
            android:id="@+id/Fuel"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:ems="10"
            android:hint="@string/start_fuel"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/doofesFeld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:ems="10"
            android:hint=" Kosts per Unit"
            android:inputType="numberDecimal" />

    </GridLayout>

    <Button
        android:id="@+id/StartButton"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onStart"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GridLayout" />

</android.support.constraint.ConstraintLayout>